# brag-doc

./: CLAUDE.md  DEPLOY.md  README.md  backlog.txt  fly.toml  pr_description.txt
.github/workflows/: ci.yml  fly-deploy.yml  fly-pr-preview.yml
backend/: .dockerignore  .env.example  Dockerfile  README.md  admin.py  auth.py  brag_doc.py  budget.py  coach.py  main.py  prompts.py  pyproject.toml  rate_limit.py  reframe.py  sentry_setup.py  telemetry.py  utils.py
backend/tests/: conftest.py  test_admin.py  test_auth.py  test_brag_doc.py  test_budget.py  test_coach.py  test_error_capture.py  test_health.py  test_rate_limit.py  test_reframe.py  test_sentry_setup.py  test_telemetry.py  test_utils.py
design/: preview-v2.html  preview.html
docs/superpowers/code-reviews/: mvp-review-cursor.md  mvp-review.md
docs/superpowers/plans/: implementation-plan.md  (+14 more)
frontend/: .env.example  README.md  eslint.config.mjs  instrumentation-client.ts  instrumentation.ts  next.config.ts  package-lock.json  package.json  playwright.config.ts  sentry.config.ts  vitest.config.ts
frontend/e2e/: account-deletion.spec.ts  auth.spec.ts  brag-doc.spec.ts  categories.spec.ts  coach-error.spec.ts  coach.spec.ts  entries.spec.ts  journal.spec.ts  migration.spec.ts  persistence.spec.ts  rls.spec.ts  settings-coach.spec.ts
frontend/src/: proxy.ts  test-setup.ts
frontend/test-results/: .last-run.json
supabase/: config.toml
supabase/migrations/: 0001_initial_schema.sql  0002_rls_policies.sql  0003_migrate_localstorage_fn.sql  0004_add_ai_consent.sql  0005_usage_counters.sql  0006_llm_usage.sql
(+103 files in other folders)
